[tool.poetry]
name = "nuclear-luncher"
version = "0.1.0"
description = ""
authors = ["Tan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
plotly = "^5.18.0"
dash = "^2.14.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
ruff = "^0.1.4"
pytest-flask = "^1.3.0"
pytest-mock = "^3.12.0"
yapf = "^0.40.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
